# lastfm-spotify-syncer

./: .gitignore  LICENSE  README.MD  requirements.txt
podcasts/: notification_service.py
podcasts/sources/: base.py  podcast_init_source.py
podcasts/tests/: test_podcast_init.py
podcasts/tests/samples/: 331_page.html
rsyncer/: .dockerignore  .gcloudignore  Cargo.toml  Dockerfile  README.MD  cloudbuild.yaml  justfile  rustfmt.toml
rsyncer/src/: cli.rs  lib.rs  main.rs  syncer.rs
rsyncer/src/clients/: entities.rs  errors.rs  lastfm.rs  local_storage.rs  mod.rs  spotify.rs
rsyncer/terraform/: .gitignore  README.md  artifact_registry.tf  budget.tf  cloud_run.tf  firestore.tf  iam.tf  main.tf  monitoring.tf  outputs.tf  project.tf  storage.tf  terraform.tfvars.example  variables.tf  versions.tf
services/: last_fm.py  spotify.py
syncer/: app.py  di_containers.py  model.py
