[package]
name = "rsyncer"
version = "0.2.0"
edition = "2024"
rust-version = "1.92.0"

[dependencies]
async-duckdb = "0.3.0"
clap = "4.5.53"
dirs = "6.0.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
lastfm-rust = "0.1.0"
log = "0.4.29"
rand = "0.9.2"

rspotify = { version = "*", features = ["cli"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48", features = ["full"] }
