[package]
name = "rsyncer"
version = "0.2.0"
edition = "2024"
rust-version = "1.92.0"
description = "Sync liked tracks from Spotify to Last.fm"
license = "MIT"
repository = "https://github.com/nickmetal/lastfm-spotify-syncer"
keywords = ["spotify", "lastfm", "music", "sync"]
categories = ["command-line-utilities"]

[dependencies]
async-duckdb = "0.3.0"
clap = "4.5.53"
dirs = "6.0.0"
dotenvy = "0.15.7"
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
lastfm-rust = "0.1.0"
log = "0.4.29"
rand = "0.9.2"

rspotify = { version = "0.15.3", features = ["cli"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
tokio = { version = "1.48", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-util",
    "net",
] }

[profile.release]
lto = true        # Link-time optimization
codegen-units = 1 # Better optimization, slower compile
opt-level = "z"   # Optimize for size
strip = true      # Strip symbols automatically
panic = "abort"   # Smaller panic handler

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
missing_errors_doc = "allow"
# Allow multiple crate versions from transitive dependencies
multiple_crate_versions = "allow"
